src/modal/modal.css
.modal-window {
    position: fixed;
    top: 0;
    left:0;
    width:100%;
    height: 100vh;
    background-color: rgba(0, 0, 0, 0.8);
    display: flex;
    justify-content: center;
    align-items: center;
}

.modal-container {
    width: 30rem;
    background-color: white;
    font-family: 'Open Sans', sans-serif;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.modal-container img {
    height: 60%;
    width:100%;
    object-fit: contain;
}

.modal-title-bar {
   display: flex;
   justify-content: space-between;
}

.modal-recipie-title {
    font-size: 1.2rem;
    font-weight: bold;
}

.modal-close-button {
    margin: 2px;
    background-color: rgb(230, 113, 84);
    border: none;
    font-size: large;
    color: white;
    font-weight: bold;
    cursor: pointer;
}

.modal-container p, label{
    padding-left: 1rem;
}

.modal-container span{
    font-weight: bold;
}

